Improved HTML message page.

--- a/fiction_dl/Resources/PrettyHTMLText.html
+++ b/fiction_dl/Resources/PrettyHTMLText.html
@@ -10,41 +10,47 @@
 
 		<style>
 
-            body
-            {
+			body
+			{
 
-                margin: 20vh auto;
+				margin: 10vh auto;
 
-                max-width: 60rem;
+				color: #222;
+				font-size: 3em;
+				font-family: "Source Serif Pro", Cambria, Georgia, "Times New Roman", serif;
+				text-align: center;
 
-                color: #222;
-                font-size: 3em;
-                font-family: "Source Serif Pro", Cambria, Georgia, "Times New Roman", serif;
-                text-align:center;
+			}
 
-            }
+			body > header
+			{
 
-            body > header > h1
-            {
+				margin-bottom: 2em;
+				padding: 5vh 0;
 
-                font-size: 1em;
+				color: #fff;
+				font-family: Calibri, Arial, sans-serif;
 
-            }
+				background: #0acffb;
+				background: linear-gradient(350deg, #0acffb 0%, #000 100%);
 
-            body > header > h2
-            {
+			}
 
-                margin-top: 0;
+			body > header > h1
+			{
 
-            }
+				font-size: 1.5em;
+				font-weight: inherit;
 
-            p
-            {
+			}
 
-                text-align: justify;
-                line-height: 1.5em;
+			p
+			{
 
-            }
+				text-align: justify;
+				line-height: 1.5em;
+
+			}
 
 		</style>
 
