--- a/fiction_dl/Resources/PrettyHTMLText.html
+++ b/fiction_dl/Resources/PrettyHTMLText.html
@@ -6,7 +6,7 @@
 
 		<meta charset = "UTF-8">
 
-		<title>@@@ApplicationName@@@</title>
+		<title>@@@ApplicationName@@@ @@@ApplicationVersion@@@</title>
 
 		<style>
 
